# Emojies

./: .clang-format-ignore  .gitignore  .python-version  CMakeLists.txt  Doxyfile  README.md  SolutionController.py  SolutionRenamer.py  SolutionUpgrader.py  conanfile.py  conantools.py  docker.sh
.github/workflows/: docker.yml  generate_readme.py  linux.yml  macos.yml  make-pub.conf  make-pub.yml  windows.yml
assets/: customstrings.json  ems-mini.html
cmake/: project-common.cmake  project-library.cmake  project-standalone.cmake  project-tests.cmake  tmplt-assets.cmake  tmplt-coverage.cmake  tmplt-emscripten.cmake
docker/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  nginx.conf
include/EmojiesLib/: EmojiesLib.hpp
src/: EmojiesLib.cpp  UnicodeEmojiTestTxt.hpp
src/Assets/: AssetContext.cpp  AssetContext.hpp
src/Logger/: Logger.hpp
standalone/src/: AppCore.hpp
standalone/tests/: CMakeLists.txt  LibTester.cpp
